recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:10: error: not found: value sqrt
    crab(levels-1,length/sqrt(2))
                         ^Crab:12: error: not found: value sqrt
    crab(levels-1,length/sqrt(2))
                         ^